# STloop

./: .env.example  .gitignore  ARCHITECTURE.md  FINAL_SUMMARY.md  PHASE4_PLAN.md  README.md  REDESIGN_SUMMARY.md  REVIEW.md  STloop_Test_Report.md  main.py  opencode.json  pyproject.toml  requirements-lock.txt  requirements.txt  test_phase5.py  test_renode_diagnosis.py  test_serial_monitor.py  test_ui.py  test_ui_simple.py
.cursor/rules/: stloop-ci.mdc  stloop-codegen.mdc  stloop-testing.mdc
.cursor/skills/stloop-developer/: SKILL.md
.cursor/skills/stloop-e2e-hardening/: SKILL.md
.github/workflows/: ci.yml  e2e-test.yml  security.yml
config/: config.example.yaml
demos/blink/src/: main.c
docs/: CUBE_VS_ZEPHYR.md  DECISION_CHECKLIST.md  DEMO_GUIDE.md  E2E_CODE_FLOW.md  LESSONS.md  MEMORY_SYSTEM.md  PROGRESS_STATUS.md  RENODE_MONITOR_COMMANDS.md  RENODE_PERSISTENT_SESSION.md  RENODE_PLAN.md  STLOOP_TEST_REPORT_FIX.md  USER_GUIDE.md  ZEPHYR_RENODE_E2E.md
docs/skills/: README.md
docs/skills/brainstorming/: SKILL.md
docs/skills/stm32-startup-linker/: SKILL.md
docs/skills/systematic-debugging/: SKILL.md
docs/skills/test-driven-development/: SKILL.md
examples/: CMakeLists.txt
examples/blink/: CMakeLists.txt
examples/blink/cmake/: arm-gcc-toolchain.cmake
examples/blink/inc/: main.h
memory/: lesson.md
src/: __init__.py  builder.py  flasher.py  llm_client.py  tester.py
stloop/: __init__.py  __main__.py  _paths.py  build_fix_policy.py  builder.py  chat.py  chat_rich.py  chip_config.py  chip_family.py  cli.py  cli_rich.py  client.py  code_validator.py  errors.py  flasher.py  linker_gen.py  llm_client.py  llm_config.py  logger.py  memory.py  project_generator.py  project_spec.py  tester.py
stloop-ui/: index.html  package.json  vite.config.ts
stloop-ui/src/: App.css  App.tsx  styles.css
stloop-ui/src-tauri/: Cargo.toml  tauri.conf.json
stloop-ui/src-tauri/src/: commands.rs  llm.rs  main.rs  project.rs
stloop-ui/src/components/: Chat.css  Chat.tsx  InputBox.css  InputBox.tsx  SettingsModal.css  SettingsModal.tsx  Sidebar.css  Sidebar.tsx
stloop-web/: ARCHITECTURE.md  index.html  package.json
stloop-web/src/: App.css  App.tsx  index.css
stloop-web/src/components/: Chat.css  Chat.tsx  Header.css  Header.tsx  InputBox.css  InputBox.tsx  Sidebar.css  Sidebar.tsx
stloop-web/src/lib/: export.ts  project.ts
stloop-web/src/types/: index.ts
stloop/agents/: __init__.py  build_agent.py  debug_agent.py  end_to_end.py  flash_agent.py  validation_agent.py
stloop/hardware/: board_database.py  mcu_database.py
stloop/scripts/: download_cube.py
stloop/simulators/: __init__.py  renode.py  renode_session.py
stloop/templates/user_project_skill/: SKILL.md
stloop/ui/: __init__.py  console.py  hardware_catalog.py  serial_monitor.py  theme.py  validation_protocol.py  validation_view.py
stloop/ui/components/: header.py  panels.py  progress.py
stloop/validation/: __init__.py  data_sources.py  hardware_topology.py  validation_agent.py
templates/stm32_ll/: CMakeLists.txt
templates/stm32_ll/src/: main.c
templates/zephyr/: CMakeLists.txt  README.md  build.sh  build_zephyr.py  prj.conf
templates/zephyr/src/: main.c
test_e2e/src/: main.c
test_e2e_final/: chip_config.cmake  project_spec.json
test_e2e_final/src/: main.c
test_pure_e2e/: CMakeLists.txt  STM32F411xx_FLASH.ld
test_pure_e2e/inc/: stm32f4xx_hal_conf.h
test_pure_e2e/src/: main.c
test_renode_diagnosis/: test_diagnosis.resc
test_zephyr/: prj.conf
test_zephyr/src/: main.c
tests/: e2e_test.py  test_build_fix_policy.py  test_smoke.py
tests/integration/: test_build_flow.py  test_zephyr_renode_e2e.py
tests/integration/test_zephyr/build_e2e/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
tests/unit/: test_hardware_catalog.py  test_refactored_flow.py  test_renode.py
