[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stloop"
version = "0.1.0"
description = "STLoop — STM32 自然语言端到端开发 Client（LL 库 + CMake + pyOCD）"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyocd>=0.36.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
pdf = ["pypdf>=4.0"]  # 原理图/芯片手册 PDF 文本提取

[project.scripts]
stloop = "stloop.cli:main"

[tool.setuptools.packages.find]
include = ["stloop*"]

[tool.ruff]
line-length = 100
target-version = "py310"
